--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 
       @media only screen and (min-width: 375px) and (max-width: 768px) {
         .container {
-          height: 20rem;
+          height: auto;
           width: auto;
           left: auto;
-          margin: 0 6rem;
+          margin: 0 4rem;
         }
       }
     </style>
