Fixed rating functionality and working on user selected rate

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           />
         </svg>
       </div>
-      <p id="rates"></p>
+
+      <p id="rates" style="visibility: hidden; display: none"></p>
+
       <h2 id="h2">How did we do?</h2>
       <p id="para">
         Please let us know how we did with your support request. All feedback is
