--- a/index.html
+++ b/index.html
@@ -19,17 +19,7 @@
     <!-- Rating state start -->
     <article class="container" id="box1">
       <div id="star-icon">
-        <svg
-          width="17"
-          height="16"
-          id="star"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z"
-            fill="#FC7614"
-          />
-        </svg>
+        <img id="star" src="starIcon.svg" alt="Star Icon" />
       </div>
 
       <p id="rates" style="visibility: hidden; display: none"></p>
@@ -41,11 +31,11 @@
       </p>
 
       <ul class="ratings" id="rating-numbers">
-        <li class="rating-list" value="1">1</li>
-        <li class="rating-list" value="2">2</li>
-        <li class="rating-list" value="3">3</li>
-        <li class="rating-list" value="4">4</li>
-        <li class="rating-list" value="5">5</li>
+        <button class="rating-list" value="1">1</button>
+        <button class="rating-list" value="2">2</button>
+        <button class="rating-list" value="3">3</button>
+        <button class="rating-list" value="4">4</button>
+        <button class="rating-list" value="5">5</button>
       </ul>
       <!-- Rating state end -->
 
