--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+<!-- Primary Meta Tags -->
+<title>Frontend Mentor | Interactive rating component</title>
+<meta name="title" content="Frontend Mentor | Interactive rating component">
+<meta name="description" content="">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://abhi-cool-karni.github.io/Interactive-rating-component.github.io/">
+<meta property="og:title" content="Frontend Mentor | Interactive rating component">
+<meta property="og:description" content="Frontend Mentor | Interactive rating component">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://abhi-cool-karni.github.io/Interactive-rating-component.github.io/">
+<meta property="twitter:title" content="Frontend Mentor | Interactive rating component">
+<meta property="twitter:description" content="Frontend Mentor | Interactive rating component">
+<meta property="twitter:image" content="">
     <link
       rel="icon"
       type="image/png"
