--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <!-- Primary Meta Tags -->
 <title>Frontend Mentor | Interactive rating component</title>
 <meta name="title" content="Frontend Mentor | Interactive rating component">
-<meta name="description" content="">
+<meta name="description" content="162499876-c0f36b54-6252-45b7-a0a3-48651008be1c.png">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://abhi-cool-karni.github.io/Interactive-rating-component.github.io/">
 <meta property="og:title" content="Frontend Mentor | Interactive rating component">
 <meta property="og:description" content="Frontend Mentor | Interactive rating component">
-<meta property="og:image" content="">
+<meta property="og:image" content="162499876-c0f36b54-6252-45b7-a0a3-48651008be1c.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
