--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!-- Primary Meta Tags -->
 <title>Frontend Mentor | Interactive rating component</title>
 <meta name="title" content="Frontend Mentor | Interactive rating component">
-<meta name="description" content="162499876-c0f36b54-6252-45b7-a0a3-48651008be1c.png">
+<meta name="description" content="Frontend Mentor | Interactive rating component">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
@@ -21,7 +21,7 @@
 <meta property="twitter:url" content="https://abhi-cool-karni.github.io/Interactive-rating-component.github.io/">
 <meta property="twitter:title" content="Frontend Mentor | Interactive rating component">
 <meta property="twitter:description" content="Frontend Mentor | Interactive rating component">
-<meta property="twitter:image" content="">
+<meta property="twitter:image" content="162499876-c0f36b54-6252-45b7-a0a3-48651008be1c.png">
     <link
       rel="icon"
       type="image/png"
